log_output_ping-pong_application/manifests/deployment._ping_pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpongapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongapp
  template:
    metadata:
      labels:
        app: pingpongapp
    spec:
      volumes: # Define volume
        - name: shared-log-output-ping-pong
          persistentVolumeClaim:
            claimName: log-output-ping-pong-claim
      containers:
        - name: pingpong
          image: hinichijou/pingpong_application:wstujrkv
          volumeMounts: # Mount volume
          - name: shared-log-output-ping-pong
            mountPath: /usr/src/app/files
      securityContext:
        fsGroup: 1001
