log_output_ping-pong_application/manifests/service_ping_pong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: pingpongapp-svc
spec:
  type: LoadBalancer
  selector:
    app: pingpongapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
