log_output_ping-pong_application/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: exercises
  name: log-output-pingpong-gateway
spec:
  # For local use with k3d cluster and envoy gateway
  gatewayClassName: eg
  # For GKE use
  #gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
