log_output_ping-pong_application/manifests/route_ping_pong.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: pingpongapp-route
spec:
  parentRefs:
  - name: log-output-pingpong-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpongapp-svc
      port: 2345
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            # type ReplaceFullPath made more sense based on the gateway api documentation but apparently GKE Gateway Controller does not support the configuration
            type: ReplacePrefixMatch
            replacePrefixMatch: /
